--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
 </head>
 <body>
 <script>
-alert("Minh Quang muốn cho bạn biết là Minh Quang iu bạn vai loz :3");
-window.location = "https://www.facebook.com/khongaibangemdau7208";
+alert("Minh Quang rất iu bạn <3");
+document.write("awww dcm iu bạn vcl đ hiểu nói kiểu gì được ....");
+await sleep(1);
+document.write("ib Minh Quang ngay nhéee")
+await sleep(2);
+window.location = 'https://www.facebook.com/messages/t/100070468402940'
 </script>
 </body>
 </html>
