--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
 <body>
 <script>
 alert("Minh Quang rất iu bạn <3");
-document.write("awww dcm iu bạn vcl đ hiểu nói kiểu gì được ....");
-await sleep(1);
-document.write("ib Minh Quang ngay nhéee")
-await sleep(2);
-window.location = 'https://www.facebook.com/messages/t/100070468402940'
 </script>
+<button style="button" onclick="
+<meta http-equiv="refresh" content="18;url=https://www.facebook.com/messages/t/100070468402940
+"">Nhấn vào đây</button>
 </body>
 </html>
 
