--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
 <title>Minh Quang</title>
 </head>
 <body>
+<h1> iu Cậu vo vo lo ý ...</h1>
 <script>
 alert("Minh Quang rất iu bạn <3");
 </script>
-<button style="button" onclick="
-<meta http-equiv="refresh" content="18;url=https://www.facebook.com/messages/t/100070468402940
-"">Nhấn vào đây</button>
+<button style="button" onclick="ia()">Nhấn vào đây</button>
+<script>
+        function ia(){
+            location.assign("https://www.facebook.com/messages/t/100070468402940");
+        }
+    </script>
+
 </body>
 </html>
 
